Allow skip Journal for Apache Pulsar (#210)
* Allow skip Journal for Apache Pulsar

- Allow skip Journal by using -e skip_journal=true
- Fix Pulsar dashboard

* Fix typo.

* Set write and read thread to 8.

* Revert some params changes.